syntax = "proto3";

package component;

message TextComponent {
  string text = 1;
}
